--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/firestore": "^4.9.0",
     "@sendgrid/mail": "^8.1.5",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^2.0.0",
     "cloudinary": "^2.7.0",
     "firebase": "^12.0.0",
