--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "lucide-react": "^0.539.0",
     "netlify-cli": "^23.5.0",
     "next": "^15.5.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
-    "resend": "^6.0.2"
+    "resend": "^6.0.2",
+    "undici": "^7.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
